work for the https://github.com/surveyjs/survey-library/issues/8056

--- a/src/common-styles/sv-ranking.scss
+++ b/src/common-styles/sv-ranking.scss
@@ -64,7 +64,7 @@
 .sv-ranking-item--preview.sv-ranking-item--preview {
   cursor: initial;
   user-select: initial;
-    -webkit-user-select: initial;
+  -webkit-user-select: initial;
 
   .sv-ranking-item__icon-container.sv-ranking-item__icon-container {
     .sv-ranking-item__icon.sv-ranking-item__icon {
@@ -246,6 +246,18 @@
   .sv-ranking-item__icon-container {
     margin-left: calcSize(1);
   }
+}
+
+.sv-ranking-shortcut {
+  cursor: grabbing;
+  position: absolute;
+  z-index: 10000;
+  border-radius: calc(12.5 * var(--sjs-base-unit, var(--base-unit, 8px)));
+  min-width: 100px;
+  max-width: 400px;
+  box-shadow: var(--sjs-shadow-medium, 0px 2px 6px 0px rgba(0, 0, 0, 0.1)), var(--sjs-shadow-large, 0px 8px 16px 0px rgba(0, 0, 0, 0.1));
+  background-color: var(--sjs-general-backcolor, var(--background, #fff));
+  font-family: var(--sjs-font-family, var(--font-family, var(--sjs-default-font-family)));
 }
 
 .sv-ranking--select-to-rank {
