--- a/src/main.scss
+++ b/src/main.scss
@@ -16,6 +16,7 @@ $font-family: var(--font-family, var(--sjs-default-font-family));
 @import "./common-styles/sv-brand-info.scss";
 @import "./common-styles/sv-drag-drop.scss";
 @import "./common-styles/sv-save-data.scss";
+@import "./common-styles/sv-ranking.scss";
 
 $header-background-color: #e7e7e7;
 $body-container-background-color: #f4f4f4;
