--- a/src/defaultV2-theme/variables.scss
+++ b/src/defaultV2-theme/variables.scss
@@ -188,6 +188,13 @@ $pd-tab-move-in-margin: var(--sjs-pd-tab-move-in-margin, 50%);
 $pd-tab-move-out-margin: var(--sjs-pd-tab-move-out-margin, 50%);
 $pd-tab-move-margin: var(--sjs-pd-tab-move-margin);
 
+$pd-tab-add-fade-in-duration: var(--sjs-pd-tab-add-fade-in-duration, 500ms);
+$pd-tab-add-fade-in-delay: var(--sjs-pd-tab-add-fade-in-delay, 250ms);
+$pd-tab-remove-fade-out-duration: var(--sjs-pd-tab-remove-fade-out-duration, 150ms);
+$pd-tab-remove-fade-out-delay: var(--sjs-pd-tab-remove-fade-out-delay, 0ms);
+$pd-tab-remove-fade-in-delay: var(--sjs-pd-tab-remove-fade-in-delay, 150ms);
+
+
 $pd-list-fade-in-duration: var(--sjs-pd-list-fade-in-duration, 500ms);
 $pd-list-move-in-duration: var(--sjs-pd-list-move-in-duration, 250ms);
 $pd-list-fade-in-delay: var(--sjs-pd-list-fade-in-delay, 250ms);
