--- a/src/defaultV2-theme/blocks/sd-progress.scss
+++ b/src/defaultV2-theme/blocks/sd-progress.scss
@@ -20,11 +20,11 @@
   line-height: calcLineHeight(1);
   font-weight: 600;
 
-  @media only screen and (min-width: calcSize(125)) {
+  @media only screen and (min-width: 1000px) {
     margin-left: 5%;
   }
 
-  @media only screen and (max-width: calcSize(125)) {
+  @media only screen and (max-width: 1000px) {
     margin-left: 10px;
   }
 }
