Fixed #8199 - Incorrect rendering boolean question if labels values are several words

--- a/src/defaultV2-theme/blocks/sd-boolean.scss
+++ b/src/defaultV2-theme/blocks/sd-boolean.scss
@@ -37,6 +37,7 @@
   height: calc(100%);
   box-sizing: border-box;
   border-radius: calcSize(12.5);
+  overflow: hidden;
 }
 
 .sd-boolean.sd-boolean--checked .sd-boolean__label--true,
