Bug/8199 Incorrect rendering boolean question if labels values are several words (#8223)
* Fixed #8199 - Incorrect rendering boolean question if labels values are several words

* Fixed lint

* Updated markup test etalon

* Fixed vr-tests - updated etalons

* Try to fix tests

* Work for #8199 - Incorrect rendering boolean question if labels values are several words - optimizig behavior

* Fixed markup tests

* Updated etalon

* Fixed vr-test

* Updated etalon

---------

Co-authored-by: tsv2013 <tsv2013@noreply.github.com>

--- a/src/defaultV2-theme/blocks/sd-boolean.scss
+++ b/src/defaultV2-theme/blocks/sd-boolean.scss
@@ -37,6 +37,7 @@
   height: calc(100%);
   box-sizing: border-box;
   border-radius: calcSize(12.5);
+  overflow: hidden;
 }
 
 .sd-boolean.sd-boolean--checked .sd-boolean__label--true,
@@ -64,7 +65,6 @@
   transition-timing-function: linear;
   color: $primary;
   font-weight: 600;
-  margin-left: 0%;
 
   .sv-string-viewer {
     &.sv-string-viewer--multiline {
@@ -75,18 +75,7 @@
   z-index: 2;
 }
 
-.sd-boolean--checked .sd-boolean__thumb {
-  margin-left: 50%;
-}
-
 .sd-boolean--exchanged {
-  .sd-boolean__thumb {
-    margin-left: calc(50% + calcSize(0.5));
-  }
-
-  &.sd-boolean--checked .sd-boolean__thumb {
-    margin-left: 0%;
-  }
 
   &.sd-boolean:not(.sd-boolean--checked):not(sd-boolean--indeterminate) .sd-boolean__label--false,
   &.sd-boolean.sd-boolean--checked .sd-boolean__label--true {
