--- a/src/defaultV2-theme/blocks/sd-boolean.scss
+++ b/src/defaultV2-theme/blocks/sd-boolean.scss
@@ -75,7 +75,14 @@
   z-index: 2;
 }
 
+.sd-boolean--checked .sd-boolean__thumb {
+  margin-left: 50%;
+}
+
 .sd-boolean--exchanged {
+  .sd-boolean__thumb {
+    margin-left: calc(50% + calcSize(0.5));
+  }
 
   &.sd-boolean:not(.sd-boolean--checked):not(sd-boolean--indeterminate) .sd-boolean__label--false,
   &.sd-boolean.sd-boolean--checked .sd-boolean__label--true {
