Implement delayed fade in when animating adding and deletings rows synchronously

--- a/src/defaultV2-theme/variables.scss
+++ b/src/defaultV2-theme/variables.scss
@@ -138,6 +138,7 @@ $row-fade-in-delay: var(--sjs-row-fade-in-delay, 150ms);
 $row-fade-out-duration: var(--sjs-row-fade-out-duration, 150ms);
 $row-move-out-duration: var(--sjs-row-move-out-duration, 250ms);
 $row-move-out-delay: var(--sjs-row-move-out-delay, 100ms);
+$row-fade-in-animation-delay: var(--sjs-row-fade-in-animation-delay, 400ms);
 
 $expand-fade-in-duration: var(--sjs-expand-fade-in-duration, 500ms);
 $expand-move-in-duration: var(--sjs-expand-move-in-duration, 150ms);
