Fix matrix animation works incorrectly when tailwind is loaded

--- a/src/defaultV2-theme/blocks/sd-table.scss
+++ b/src/defaultV2-theme/blocks/sd-table.scss
@@ -14,6 +14,8 @@
 .sd-table__cell {
   border-top: calcSize(1) solid transparent;
   border-bottom: calcSize(1) solid transparent;
+  border-left: none;
+  border-right: none;
   background-clip: padding-box;
 }
 
