--- a/packages/survey-angular-ui/src/components/dropdown/dropdown.component.html
+++ b/packages/survey-angular-ui/src/components/dropdown/dropdown.component.html
@@ -1,6 +1,6 @@
 <div [class]="model.cssClasses.selectWrapper" (click)="click($event)">
     <div *ngIf="!model.isReadOnly" [attr.tabindex]="dropdownModel.noTabIndex ? null : 0" [class]="model.getControlClass()"
-        [attr.disabled]="model.isInputReadOnly ? true : null" (blur)="blur($event)"
+        [attr.disabled]="model.isDisabledAttr ? true : null" (blur)="blur($event)"
         (keydown)="keyhandler($event)" [attr.id]="model.inputId" [attr.aria-required]="model.ariaRequired"
         [attr.aria-label]="model.ariaLabel" [attr.aria-invalid]="model.ariaInvalid"
         [attr.aria-errormessage]="model.ariaErrormessage" [attr.role]="model.ariaRole"
@@ -24,7 +24,7 @@
             [attr.id]="model.getInputId()"
             [attr.inputmode]="dropdownModel.inputMode"
             [attr.tabindex]="dropdownModel.noTabIndex ? null : -1"
-            [attr.disabled]="model.isInputReadOnly ? true : null"
+            [attr.disabled]="model.isDisabledAttr ? true : null"
             [attr.aria-controls]="dropdownModel.listElementId"
             [attr.aria-label]="model.a11y_input_ariaLabel"
             [attr.aria-labelledby]="model.a11y_input_ariaLabelledBy"
@@ -44,7 +44,12 @@
         </div>
     </div>
     <sv-ng-popup *ngIf="!model.isReadOnly" [popupModel]="dropdownModel.popupModel"></sv-ng-popup>
-    <div disabled *ngIf="model.isReadOnly" [class]="model.getControlClass()" [attr.id]="model.inputId">
+    <div *ngIf="model.isReadOnly" [class]="model.getControlClass()" [attr.id]="model.inputId" 
+    [attr.tabindex]="model.isDisabledAttr ? null : 0"
+    [attr.disabled]="model.isDisabledAttr ? true : null"
+    [attr.aria-label]="model.a11y_input_ariaLabel"
+    [attr.aria-labelledby]="model.a11y_input_ariaLabelledBy"
+    [attr.aria-describedby]="model.a11y_input_ariaDescribedBy">
         <sv-ng-string *ngIf="model.selectedItemLocText" [model]="model.selectedItemLocText"></sv-ng-string>
         <div>{{ model.readOnlyText }}</div>
     </div>
