--- a/packages/survey-angular-ui/src/components/tagbox/tagbox-filter.component.html
+++ b/packages/survey-angular-ui/src/components/tagbox/tagbox-filter.component.html
@@ -17,7 +17,7 @@
       [attr.inputmode]="model.inputMode"
       [attr.role]="model.filterStringEnabled ? question.ariaRole : null"
       [attr.readonly]="model.filterReadOnly ? true : null"
-      [attr.disabled]="question.isInputReadOnly ? true : null"
+      [attr.disabled]="question.isDisabledAttr ? true : null"
       [attr.size]="!model.inputStringRendered ? 1 : null"
       [attr.aria-label]="question.a11y_input_ariaLabel"
       [attr.aria-labelledby]="question.a11y_input_ariaLabelledBy"
