--- a/packages/survey-angular-ui/src/components/rating/rating-item-smiley.component.html
+++ b/packages/survey-angular-ui/src/components/rating/rating-item-smiley.component.html
@@ -3,7 +3,7 @@
     <input type="radio"
       class="sv-visuallyhidden"
       [attr.name]="model.questionName" [attr.id]="model.getInputId(index)" [value]="item.value" [attr.aria-required]="model.ariaRequired" [attr.aria-label]="model.ariaLabel" [attr.aria-invalid]="model.ariaInvalid" [attr.aria-errormessage]="model.ariaErrormessage"
-      [disabled]="model.isInputReadOnly" [checked]="model.value === item.value" (click)="onClick($event)"
+      [disabled]="model.isDisabledAttr" [readonly]="model.isReadOnlyAttr" [checked]="model.value === item.value" (click)="onClick($event)"
       />
       <svg [iconName]="model.getItemSmileyIconName(item.itemValue)" [size]="'auto'" [title]="item.text" sv-ng-svg-icon></svg>
   </label>
