Implement animation via the new approach

--- a/packages/survey-angular-ui/src/components/file/file-item.component.html
+++ b/packages/survey-angular-ui/src/components/file/file-item.component.html
@@ -1,5 +1,5 @@
 <ng-template #template>
-    <span [class]="question.cssClasses.preview">
+    <span [class]="question.cssClasses.previewItem">
         <div *ngIf="item.name && question.cssClasses.fileSign" [class]="question.cssClasses.fileSign">
             <a (click)="question.doDownloadFile($event, item)" [attr.href]="item.content | safeUrl"
                 [attr.title]="item.name" [attr.download]="item.name" [style.width]="question.imageWidth">{{
