--- a/packages/survey-angular-ui/src/components/file/file-page.component.html
+++ b/packages/survey-angular-ui/src/components/file/file-page.component.html
@@ -1,5 +1,5 @@
 <ng-template #template>
-    <div [class]="page.css">
+    <div [class]="page.css" [attr.id]="page.id">
         <ng-container *ngFor="let item of page.items">
             <sv-ng-file-item [item]="item" [question]="question"></sv-ng-file-item>
         </ng-container>
