--- a/src/defaultV2-theme/blocks/sd-file.scss
+++ b/src/defaultV2-theme/blocks/sd-file.scss
@@ -196,10 +196,6 @@
   position: absolute;
 }
 
-.sd-file__page--hidden {
-  display: none;
-}
-
 @keyframes file-page-to-right {
   from {
     opacity: 1;
@@ -272,16 +268,13 @@
   animation-name: file-page-from-left;
 }
 
-.sd-file__preview {
+.sd-file__preview-item {
   position: relative;
   display: flex;
   align-items: stretch;
   flex-direction: column;
   min-height: 100%;
   width: calcSize(12);
-  transition-property: margin;
-  transition-duration: 1s;
-  margin: 0;
 
   .sd-file__default-image {
     width: calcSize(7);
@@ -371,7 +364,6 @@
   .sd-file__page {
     height: 100%;
   }
-  .sd-file__preview {
   .sd-file__preview-item {
     width: 100%;
     margin: 0;
@@ -414,7 +406,6 @@
       height: 100%;
       outline: none;
     }
-  }
   }
 }
 
