--- a/src/knockout/components/file/file-item.html
+++ b/src/knockout/components/file/file-item.html
@@ -1,4 +1,4 @@
-<span data-bind="css: question.cssClasses.preview">
+<span data-bind="css: question.cssClasses.previewItem">
   <!-- ko template: { name: 'survey-question-file-sign', data: {question: question, item: item, fileSignCss: question.cssClasses.fileSign} } --><!-- /ko -->
   <div data-bind="css: question.getImageWrapperCss(item)">
     <!-- ko if: question.canPreviewImage(item) -->
