--- a/packages/survey-angular-ui/src/components/file/file-preview.component.html
+++ b/packages/survey-angular-ui/src/components/file/file-preview.component.html
@@ -2,7 +2,7 @@
     <ng-container *ngIf="question.showPreviewContainer">
         <div [class]="question.cssClasses.fileList || undefined">
             <ng-container *ngIf="question.supportFileNavigator">
-                <sv-ng-file-page *ngFor="let page of question.pages" [page]="page" [question]="question"></sv-ng-file-page>
+                <sv-ng-file-page *ngFor="let page of question.renderedPages; trackBy: trackPagesFn" [page]="page" [question]="question"></sv-ng-file-page>
             </ng-container>
             <ng-container *ngIf="!question.supportFileNavigator">
                 <sv-ng-file-item *ngFor="let item of question.previewValue" [item]="item" [question]="question"></sv-ng-file-item>
