--- a/packages/survey-angular-ui/src/questions/matrixcell.component.html
+++ b/packages/survey-angular-ui/src/questions/matrixcell.component.html
@@ -5,7 +5,8 @@
     [name]="row.fullName"
     [value]="column.value"
     [checked]="row.value === column.value"
-    [disabled]="row.isReadOnly"
+    [readonly]="row.isReadOnlyAttr"
+    [disabled]="row.isDisabledAttr"
     [attr.id]="question.inputId + '_' + row.name + '_' + columnIndex"
     (change)="onChange()"
     [attr.aria-required]="question.a11y_input_ariaRequired"
