--- a/packages/survey-angular-ui/src/questions/checkbox-item.component.html
+++ b/packages/survey-angular-ui/src/questions/checkbox-item.component.html
@@ -1,3 +1,3 @@
 <input type="checkbox" role="option" [name]="question.name+model.id" [id]="question.getItemId(model)" [class]="question.cssClasses.itemControl"
-  [disabled]="!question.getItemEnabled(model)" [attr.readonly]="question.isReadOnlyAttr" [checked]="question.isItemSelected(model)" [value]="model.value" (change)="onChange($event)"/>
+  [disabled]="!question.getItemEnabled(model)" [readonly]="question.isReadOnlyAttr" [checked]="question.isItemSelected(model)" [value]="model.value" (change)="onChange($event)"/>
 <ng-content></ng-content>
