Clearing the value in dropdown clears the comment value as well fix #8287

--- a/packages/survey-angular-ui/src/questions/selectbase.component.html
+++ b/packages/survey-angular-ui/src/questions/selectbase.component.html
@@ -41,7 +41,7 @@
   <div *ngIf="model.showClearButtonInContent">
     <input
       type="button"
-      (click)="model.clearValue()"
+      (click)="model.clearValue(true)"
       [value]="model.clearButtonCaption"
       [class]="model.cssClasses.clearButton"
     />
