--- a/src/knockout/templates/question-radiogroup.html
+++ b/src/knockout/templates/question-radiogroup.html
@@ -44,7 +44,7 @@
     <div>
       <input
         type="button"
-        data-bind="click:question.clearValue, css: question.cssClasses.clearButton, value: question.clearButtonCaption"
+        data-bind="click:question.clearValueOnly, css: question.cssClasses.clearButton, value: question.clearButtonCaption"
       />
     </div>
     <!-- /ko -->
