--- a/src/knockout/templates/question-signaturepad.html
+++ b/src/knockout/templates/question-signaturepad.html
@@ -13,7 +13,7 @@
         <!-- ko if: question.canShowClearButton -->
         <div data-bind="css: question.cssClasses.controls">
             <button type='button'
-                data-bind="click: question.clearValue, css: question.cssClasses.clearButton, attr: { title: question.clearButtonCaption }">
+                data-bind="click: question.clearValueOnly, css: question.cssClasses.clearButton, attr: { title: question.clearButtonCaption }">
                     <!-- ko ifnot: question.cssClasses.clearButtonIconId -->
                         <span>✖</span>
                     <!-- /ko -->
