--- a/src/knockout/components/list/list-item-group.html
+++ b/src/knockout/components/list/list-item-group.html
@@ -1,10 +1,3 @@
-<!-- ko if: $data.item.iconName -->
-<!-- ko component: { name: "sv-svg-icon", params: { iconName: $data.item.iconName, size: $data.item.iconSize, css: $data.item.cssClasses.itemIcon } }-->
-<!-- /ko -->
-<!-- /ko -->
-<!-- ko template: { name: 'survey-string', data: $data.item.locTitle } --><!-- /ko -->
-<!-- ko if: $data.item.markerIconName -->
-<!-- ko component: { name: 'sv-svg-icon', params: { css: $data.item.cssClasses.itemMarkerIcon, iconName: $data.item.markerIconName, size: $data.item.markerIconSize } } -->
-<!-- /ko -->
+<!-- ko component: { name: 'sv-list-item-content', params: { item: $data.item, model: $data.model } } -->
 <!-- /ko -->
 <sv-popup params="{ model: $data.item.popupModel, getTarget: $parent.getTarget }"></sv-popup>
