--- a/src/knockout/components/list/list-item.html
+++ b/src/knockout/components/list/list-item.html
@@ -4,16 +4,7 @@ data-bind="css: $data.model.getItemClass($data.item), attr: { id: $data.item.ele
   <div data-bind="css: $data.model.cssClasses.itemSeparator"></div>
   <!-- /ko -->
   <div data-bind="style: { paddingInlineStart: $data.model.getItemIndent($data.item) }, css: $data.model.cssClasses.itemBody, attr: { title: $data.item.locTitle.calculatedText }">
-  <!-- ko ifnot: $data.item.component -->
-  <!-- ko if: $data.item.iconName -->
-  <!-- ko component: { name: "sv-svg-icon", params: { iconName: $data.item.iconName, size: $data.item.iconSize, css: $data.model.cssClasses.itemIcon } }-->
-  <!-- /ko -->
-  <!-- /ko -->
-  <!-- ko template: { name: 'survey-string', data: $data.item.locTitle } --><!-- /ko -->
-  <!-- /ko -->
-  <!-- ko if: $data.item.component -->
-  <!-- ko component: { name: $data.item.component, params: { item: $data.item } } -->
-  <!-- /ko -->
+  <!-- ko component: { name: $data.item.component || 'sv-list-item-content', params: { item: $data.item, model: $data.model } } -->
   <!-- /ko -->
   </div>
 </li>
