work for the https://github.com/surveyjs/survey-library/issues/8209 (booleans)

--- a/packages/survey-angular-ui/src/components/renderAs/boolean-radio/boolean-radio-item.component.html
+++ b/packages/survey-angular-ui/src/components/renderAs/boolean-radio/boolean-radio-item.component.html
@@ -3,7 +3,7 @@
     <input
       type="radio"
       [attr.name]="question.name" [attr.aria-errormessage]="question.ariaErrormessage" [value]="value" [(ngModel)]="question.booleanValue"
-      [disabled]="question.isInputReadOnly" [class]="question.cssClasses.itemRadioControl || ''"
+      [disabled]="model.isDisabledAttr" [readonly]="model.isReadOnlyAttr" [class]="question.cssClasses.itemRadioControl || ''"
     />
     <span *ngIf="question.cssClasses.materialRadioDecorator" [class]="question.cssClasses.materialRadioDecorator">
       <svg
