--- a/packages/survey-angular-ui/src/components/renderAs/boolean-checkbox/boolean-checkbox.component.html
+++ b/packages/survey-angular-ui/src/components/renderAs/boolean-checkbox/boolean-checkbox.component.html
@@ -6,7 +6,7 @@
         [value]="model.booleanValue" [class]="model.cssClasses.controlCheckbox" 
         [attr.name]="model.name" [id]="model.inputId" [attr.aria-required]="model.ariaRequired" [attr.aria-label]="model.ariaLabel"
         [attr.aria-invalid]="model.ariaInvalid" [attr.aria-errormessage]="model.ariaErrormessage" [(ngModel)]="model.booleanValue" [value]="model.booleanValue"
-        [disabled]="model.isInputReadOnly" [indeterminate]="model.isIndeterminate"
+        [disabled]="model.isDisabledAttr" [readonly]="model.isReadOnlyAttr" [indeterminate]="model.isIndeterminate"
       />
       <span [class]="model.cssClasses.checkboxMaterialDecorator">
         <svg *ngIf="!!model.svgIcon" [class]="model.cssClasses.checkboxItemDecorator">
