--- a/src/knockout/components/boolean-checkbox/boolean-checkbox.html
+++ b/src/knockout/components/boolean-checkbox/boolean-checkbox.html
@@ -3,7 +3,7 @@
     <label data-bind="css: question.cssClasses.checkboxLabel">
       <input
         type="checkbox"
-        data-bind="value: question.booleanValue, css: question.cssClasses.controlCheckbox, attr: {name: question.name, id: question.inputId, 'aria-required': question.ariaRequired, 'aria-label': question.ariaLabel, 'aria-invalid': question.ariaInvalid, 'aria-errormessage': question.ariaErrormessage}, checked: question.booleanValue, surveyProp: {indeterminate: question.isIndeterminate}, enable: !question.isInputReadOnly"
+        data-bind="value: question.booleanValue, css: question.cssClasses.controlCheckbox, attr: {name: question.name, id: question.inputId, 'aria-required': question.ariaRequired, 'aria-label': question.ariaLabel, 'aria-invalid': question.ariaInvalid, 'aria-errormessage': question.ariaErrormessage, readonly: question.isReadOnlyAttr}, checked: question.booleanValue, surveyProp: {indeterminate: question.isIndeterminate}, enable: !question.isDisabledAttr"
       />
       <span data-bind="css: question.cssClasses.checkboxMaterialDecorator">
         <!-- ko if: question.svgIcon -->
