--- a/src/common-styles/sv-list.scss
+++ b/src/common-styles/sv-list.scss
@@ -77,11 +77,12 @@
 
 .sv-list__item:hover,
 .sv-list__item:focus {
-  & > .sv-list__item-body {
-    background-color: $background-dark;
-  }
-
   outline: none;
+}
+
+.sv-list__item-body:hover,
+.sv-list__item-body:focus {
+  background-color: $background-dark;
 }
 
 .sv-list__item--with-icon.sv-list__item--with-icon {
@@ -112,7 +113,7 @@
 
 .sv-list-item__marker-icon {
   position: absolute;
-    right: calcSize(1);
+  right: calcSize(1);
   flex-shrink: 0;
   padding: calcSize(0.5);
 
