--- a/src/knockout/components/list/list-item-group.html
+++ b/src/knockout/components/list/list-item-group.html
@@ -1,3 +1,3 @@
 <!-- ko component: { name: 'sv-list-item-content', params: { item: $data.item, model: $data.model } } -->
 <!-- /ko -->
-<sv-popup params="{ model: $data.item.popupModel, getTarget: $parent.getTarget }"></sv-popup>
+<sv-popup params="{ model: $data.item.popupModel }"></sv-popup>
