--- a/src/common-styles/sv-list.scss
+++ b/src/common-styles/sv-list.scss
@@ -82,8 +82,7 @@
   outline: none;
 }
 
-.sv-list__item:focus .sv-list__item-body,
-.sv-list__item--hovered > .sv-list__item-body {
+.sv-list__item:focus .sv-list__item-body {
   background-color: $background-dark;
 }
 
