--- a/src/common-styles/sv-popup.scss
+++ b/src/common-styles/sv-popup.scss
@@ -295,6 +295,10 @@ sv-popup {
   .sv-list__filter {
     margin-bottom: calcSize(1);
   }
+  
+  .sv-list__item--hovered > .sv-list__item-body {
+    background-color: $background-dark;
+  }
 
   .sv-popup__shadow {
     box-shadow: $shadow-medium;
